@@ -231,6 +231,7 @@ Bob Kahn
 Tamito Kajiyama
 Lou Kates
 Randall Kern
+Robert Kern
 Magnus Kessler
 Lawrence Kesteloot
 Vivek Khera
